# ppxsecs

./: .gitignore  CMakeLists.txt  README.md
include/: AAfrag.h  Timer.h  kamae.h  kelner-aharonian.h  ppGam.h  utilities.h  xsecs-base.h
libs/AAfrag/: spec_gamma.txt  spec_nutot.txt
libs/cparamlib/: CMakeLists.txt
plots/: .mplstyle  plot-xsecs.py  plotlib.py
src/: AAfrag.cpp  kamae.cpp  kelner-aharonian.cpp  main.cpp  ppGam.cpp  utilities.cpp  xsecs-base.cpp
